; ModuleID = '/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_lease_off.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/KPHP/extr_php-engine.c_lease_off.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lease_state = common dso_local global i64 0, align 8
@lst_off = common dso_local global i64 0, align 8
@lease_ready_flag = common dso_local global i64 0, align 8
@rpc_main_target = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @lease_off() #0 {
  %1 = alloca i32, align 4
  %2 = load i64, i64* @lease_state, align 8
  %3 = load i64, i64* @lst_off, align 8
  %4 = icmp eq i64 %2, %3
  %5 = zext i1 %4 to i32
  %6 = call i32 @assert(i32 %5)
  %7 = load i64, i64* @lease_ready_flag, align 8
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %10, label %9

9:                                                ; preds = %0
  store i32 0, i32* %1, align 4
  br label %20

10:                                               ; preds = %0
  %11 = call i64 (...) @has_pending_scripts()
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  store i32 0, i32* %1, align 4
  br label %20

14:                                               ; preds = %10
  %15 = load i32, i32* @rpc_main_target, align 4
  %16 = call i64 @rpct_ready(i32 %15)
  %17 = icmp sge i64 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %14
  store i64 0, i64* @lease_ready_flag, align 8
  store i32 1, i32* %1, align 4
  br label %20

19:                                               ; preds = %14
  store i32 0, i32* %1, align 4
  br label %20

20:                                               ; preds = %19, %18, %13, %9
  %21 = load i32, i32* %1, align 4
  ret i32 %21
}

declare dso_local i32 @assert(i32) #1

declare dso_local i64 @has_pending_scripts(...) #1

declare dso_local i64 @rpct_ready(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
